--- a/example/package.json
+++ b/example/package.json
@@ -13,40 +13,43 @@
   "devDependencies": {
     "asturur-noto-emoji": "^3.0.3",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.7.0",
-    "bootstrap": "^4.1.1",
-    "clean-webpack-plugin": "^0.1.19",
+    "bootstrap": "^4.3.1",
+    "clean-webpack-plugin": "^1.0.1",
     "coffee-loader": "^0.9.0",
-    "coffeescript": "^2.3.0",
-    "compression-webpack-plugin": "^1.1.11",
-    "css-loader": "^0.28.11",
+    "coffeescript": "^2.3.2",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^2.1.0",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
     "favicons-webpack-plugin": "0.0.9",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
     "google-fonts-webpack-plugin": "^0.4.4",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
-    "js-beautify": "^1.7.5",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-emoji": "^1.8.1",
+    "js-beautify": "^1.8.9",
+    "lodash-webpack-plugin": "^0.11.5",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-emoji": "^1.10.0",
     "node-noto-emoji": "file:..",
-    "node-sass": "^4.9.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^7.0.1",
-    "stats-webpack-plugin": "^0.6.2",
-    "style-loader": "^0.21.0",
-    "tbirds": "^0.4.17",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.8.1",
-    "webpack-bundle-analyzer": "^2.11.2",
-    "webpack-bundle-tracker": "^0.3.0",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-manifest-plugin": "^2.0.2",
-    "worker-loader": "^1.1.1"
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "phantomjs-prebuilt": "^2.1.16",
+    "raw-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
+    "stats-webpack-plugin": "^0.7.0",
+    "style-loader": "^0.23.1",
+    "tbirds": "^0.6.4",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.5",
+    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-bundle-tracker": "^0.4.2-beta",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0",
+    "webpack-manifest-plugin": "^2.0.4",
+    "worker-loader": "^2.0.0"
   }
 }
